# word2vec

./: .gitignore  crud.py  database.py  main.py  models.py  nohup.out  pyproject.toml  schemas.py
templates/: all_writings.html  home.html  home.html.save  writing_interface.html  writings.html
