[tool.poetry]
name = "word2vec"
version = "0.1.0"
description = ""
authors = ["Ez <ezioxxk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^4.1.2"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
fastapi = "^0.71.0"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
